--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # .env.example
-ALGOLIA_API_KEY=your_algolia_api_key
-OTHER_API_KEY=your_other_api_key
+microsoft_di_key = your_algolia_api_key
+microsoft_di_endpoint = "https://XXXYOURURLXXX.cognitiveservices.azure.com/"
