--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.languageServer": "Pylance"
+    "python.languageServer": "Pylance",
+    "editor.defaultFormatter": "ms-python.python",
+    "workbench.editor.restoreViewState": true,
+    "python.justMyCode": false
 }
