--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-# .env.example
+#Microsoft Document Intelligence Read model
 microsoft_di_key = your_algolia_api_key
 microsoft_di_endpoint = "https://XXXYOURURLXXX.cognitiveservices.azure.com/"
+
+#Algolia settings
+ALGOLIA_API_KEY = api_key
+ALGOLIA_APP_ID = XXX
+ALGOLIA_INDEX_NAME = XXX
