Next is algolia checkback. v0.2

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 #Microsoft Document Intelligence Read model
-microsoft_di_key = your_algolia_api_key
+microsoft_di_key = your_di_api_key
 microsoft_di_endpoint = "https://XXXYOURURLXXX.cognitiveservices.azure.com/"
 
 #Algolia settings
