--- a/config.json
+++ b/config.json
@@ -15,5 +15,6 @@
   ],
   "pdf_scrape_enabled": true,
   "msdiread_ocr_enabled": true,
-  "upload_enabled": true
+  "upload_enabled": true,
+  "full_crawl": true
 }
